--- a/qua20-10.html
+++ b/qua20-10.html
@@ -369,7 +369,7 @@ body.fade-in {
     </div>
 
     <p>
-        <span class="line" data-text="Thân gửi **[name]** yêu quý!"></span>
+        <span class="line" data-text="Thân gửi **[name]** lớp 12A11!"></span>
         <span class="line" data-text="Tặng những bông hoa rực rỡ nhất cho người phụ nữ tuyệt vời nhất! 💐🌷"></span>
         <span class="line" data-text="🌹 Nhân ngày 20/10, xin gửi lời chúc tốt đẹp nhất tới **[name]**."></span>
         <span class="line" data-text="🌸 Chúc **[name]** luôn vui vẻ, khỏe mạnh, trẻ trung và xinh đẹp. 🌸"></span>
@@ -579,3 +579,4 @@ giftBox.addEventListener('click', () => {
 
 </body>
 </html>
+
